# n-nvim

./: CLAUDE.md  Cargo.toml
crates/n-editor/: Cargo.toml
crates/n-editor/src/: buffer.rs  command.rs  cursor.rs  highlight.rs  history.rs  jumplist.rs  lib.rs  mode.rs  options.rs  position.rs  register.rs  search.rs  split.rs  text_object.rs  view.rs  word.rs
crates/n-term/: Cargo.toml
crates/n-term/examples/: demo.rs
crates/n-term/src/: ansi.rs  buffer.rs  cell.rs  color.rs  diff.rs  event_loop.rs  input.rs  lib.rs  output.rs  reader.rs  terminal.rs
crates/n-theme/: Cargo.toml
crates/n-theme/src/: builtin.rs  contrast.rs  highlight.rs  lib.rs  palette.rs  pattern.rs  syntax.rs
src/: main.rs
