[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rodrigo Luglio"]
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# ── Binary crate (the editor itself) ─────────────────────────

[package]
name = "n-nvim"
description = "A terminal text editor that reimagines Neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
n-term = { path = "crates/n-term" }
n-editor = { path = "crates/n-editor" }
regex = "1.12.3"
