[package]
name = "n-theme"
description = "Mathematical theming engine for n-nvim — Sacred Geometry color palettes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
n-term = { path = "../n-term" }
